--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,8 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+/xd.rar
+/WFClient.rar
+/RSI-REST-MILEWSKI&NAJDA.rar
+/RSI-REST-MILEWSKI&NAJDA.pdf
+/REST.rar
